# cheeksbase

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONCURRENCY_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cheeksbase/: __init__.py  cli.py
cheeksbase/agents/: __init__.py  detectors.py  prompts.py  semantic.py
cheeksbase/connectors/: __init__.py  registry.py
cheeksbase/connectors/configs/: csv.yaml  github.yaml  hubspot.yaml  json.yaml  parquet.yaml  postgres.yaml  slack.yaml  stripe.yaml
cheeksbase/core/: __init__.py  config.py  db.py  query.py  sync.py
cheeksbase/mcp/: __init__.py  server.py
cheeksbase/mutations/: __init__.py  engine.py  executor.py  preview.py
cheeksbase/web/: __init__.py  app.py  hermes.py
cheeksbase/web/static/: app.css
cheeksbase/web/templates/: base.html  connector.html  graph.html  index.html  table.html  tasks.html  tasks_dag.html
dataforge/: __init__.py  cli.py
dataforge/connectors/: registry.py
dataforge/core/: config.py  db.py  query.py  sync.py
dataforge/mcp/: server.py
docs/: README.md  ai-os-integration.md
examples/: README.md
tests/: test_cli.py  test_connectors.py  test_coordination.py  test_core.py  test_cross_agent_tasks.py  test_integration.py  test_mutations.py  test_query.py  test_semantic.py  test_shared_memory.py  test_sync.py  test_web.py
