[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cheeksbase"
version = "0.1.0"
description = "Agent-first data platform with YAML-only connectors"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "duckdb>=1.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "pydantic>=2.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyarrow>=14.0",
    "faker>=24.0",
]

[project.scripts]
cheeksbase = "cheeksbase.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["cheeksbase"]

[tool.pytest.ini_options]
testpaths = ["tests"]